Fix banner alignment

--- a/src/components/pages/banner.scss
+++ b/src/components/pages/banner.scss
@@ -2,7 +2,7 @@
 
 .banner-container {
   width: 100%;
-  padding: 97px 0 51px;
+  padding: 97px 0;
   // display: flex;
   // flex-direction: column;
   // justify-content: center;
